--- a/static/assets/sass/pages/_homepage-2026.scss
+++ b/static/assets/sass/pages/_homepage-2026.scss
@@ -1752,7 +1752,7 @@ button.ac-button,
 
       p {
         color: $color-text-medium;
-        font-size: $font-size-small;
+        font-size: 14px;
         font-weight: 400;
         line-height: 22px;
         flex: 1;
@@ -1803,7 +1803,11 @@ button.ac-button,
         margin-bottom: 0;
         gap: 8px;
 
-        @include desktop {
+        @include desktop-only {
+          flex-direction: column;
+          align-items: end;
+        }
+        @include touch {
           flex-direction: column;
           align-items: end;
         }
